--- a/eclipse-workspace/U2Debugger/.project
+++ b/eclipse-workspace/U2Debugger/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>helloWorld_</name>
+	<name>U2Debugger</name>
 	<comment></comment>
 	<projects>
 	</projects>
